--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: GGMselect
 Type: Package
-Title: Gaussian Graphs Models selection
-Version: 0.1-9
-Date: 2014-09-10
+Title: Gaussian Graphs Models Selection
+Version: 0.1-10
+Date: 2015-08-26
 Author: Annie Bouvier, Christophe Giraud, Sylvie Huet, Verzelen N.
 Maintainer: Annie Bouvier <Annie.Bouvier@jouy.inra.fr>
-Description: GGMselect is a package dedicated to graph estimation in Gaussian Graphical Models. The main functions return the adjacency matrix of an undirected graph estimated from a data matrix. 
-Depends: mvtnorm, lars, gtools
+Description: Graph estimation in Gaussian Graphical Models. The main functions return the adjacency matrix of an undirected graph estimated from a data matrix. 
+Imports: lars, gtools, stats
+Depends: mvtnorm
 Suggests: network, glasso
 License: GPL (>= 3)
-URL: http://www.inra.fr/miaj/public/logiciels/GGMselect/
-Packaged: 2014-09-10 13:49:53 UTC; abouvier
+URL: http://www.inra.fr/miaj/public/logiciels/GGMselect
 NeedsCompilation: yes
+Packaged: 2015-08-26 13:21:57 UTC; abouvier
 Repository: CRAN
-Date/Publication: 2014-09-10 17:15:01
+Date/Publication: 2015-08-26 16:46:29
